<resources>
    <string name="app_name">TimeTab</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="EdModo">https://new.edmodo.com/</string>
    <string name="Edulastic">https://edulastic.com/</string>
    <string name="Eduplanet21">https://eduplanet21.com/</string>
    <string name="add_reminder">What to Reminder?</string>
    <string name="details">Details</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_off">Off</string>
    <string name="repeat_no">Repetition Interval </string>
    <string name="repeat_type">Type of Repetitions</string>
</resources>