<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_blue_shade_1"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="16dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

        <LinearLayout
            android:id="@+id/add_reminder_layout_top"
            android:layout_width="match_parent"
            android:layout_height="148dp"
            android:layout_below="@+id/toolbar"
            android:orientation="vertical"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <EditText
                android:id="@+id/reminder_title"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginStart="72dp"
                android:layout_marginEnd="16dp"
                android:gravity="top|start"
                android:hint="What Task?"
                android:inputType="textCapWords|textMultiLine"
                android:lines="2"
                android:minLines="2"
                android:scrollHorizontally="false"
                android:textColor="@android:color/white"
                android:textColorHint="@color/primary_text_disabled_material_dark"
                android:textSize="18sp" />

        </LinearLayout>

        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@id/add_reminder_layout_top">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black_shade_1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/details"
                    android:layout_width="match_parent"
                    android:layout_height="72dp"
                    android:layout_marginLeft="72dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/details"
                    android:textColor="@color/abc_secondary_text_material_dark"
                    android:textSize="15dp" />

                <RelativeLayout
                    android:id="@+id/date"
                    android:layout_width="match_parent"
                    android:layout_height="72dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:onClick="setDate">

                    <ImageView
                        android:id="@+id/date_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="32dp"
                        android:src="@drawable/ic_date_time" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@id/date_icon"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/date_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/date"
                            android:textColor="@color/abc_primary_text_material_dark"
                            android:textSize="15dp" />

                        <TextView
                            android:id="@+id/set_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/abc_secondary_text_material_dark"
                            android:textSize="15dp" />

                    </LinearLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/time"
                    android:layout_width="match_parent"
                    android:layout_height="72dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:onClick="setTime">

                    <ImageView
                        android:id="@+id/time_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="32dp"
                        android:src="@drawable/ic_timer" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@id/time_icon"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/time_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/time"
                            android:textColor="@color/abc_primary_text_material_dark"
                            android:textSize="15dp" />

                        <TextView
                            android:id="@+id/set_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/abc_secondary_text_material_dark"
                            android:textSize="15dp" />

                    </LinearLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/repeat"
                    android:layout_width="match_parent"
                    android:layout_height="72dp">

                    <ImageView
                        android:id="@+id/repeat_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="32dp"
                        android:src="@drawable/ic_baseline_repeat_24" />

                    <LinearLayout
                        android:id="@+id/repeat_ll"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@id/repeat_icon"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/repeat_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/repeat"
                            android:textColor="@color/abc_primary_text_material_dark"
                            android:textSize="15dp" />

                        <TextView
                            android:id="@+id/set_repeat"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/abc_secondary_text_material_dark"
                            android:textSize="15dp" />

                    </LinearLayout>

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/repeat_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="16dp"
                        android:checked="true"
                        android:textOff="Off"
                        android:textOn="On" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/RepeatNo"
                    android:layout_width="match_parent"
                    android:layout_height="72dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:onClick="setRepeatNo">

                    <ImageView
                        android:id="@+id/repeat_no_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="32dp"
                        android:src="@drawable/ic_baseline_unfold_more_24" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@id/repeat_no_icon"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/repeat_no_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/repeat_no"
                            android:textColor="@color/abc_primary_text_material_dark"
                            android:textSize="15dp" />

                        <TextView
                            android:id="@+id/set_repeat_no"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/abc_secondary_text_material_dark"
                            android:textSize="15dp" />

                    </LinearLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/RepeatType"
                    android:layout_width="match_parent"
                    android:layout_height="72dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true">

                    <ImageView
                        android:id="@+id/repeat_type_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="32dp"
                        android:src="@drawable/ic_baseline_subject_24" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@id/repeat_type_icon"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/repeat_type_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/repeat_type"
                            android:textColor="@color/abc_primary_text_material_dark"
                            android:textSize="15dp" />

                        <TextView
                            android:id="@+id/set_repeat_type"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/abc_secondary_text_material_dark"
                            android:textSize="15dp" />

                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>

        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_active"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="168dp"
            android:clickable="true"
            android:src="@drawable/ic_reminder" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
             android:clickable="true"
            android:src="@drawable/ic_create" />

    </RelativeLayout>
</layout>